--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<div class="container">
 					<div class="row justify-content-center mb-2 pb-3">
 	          <div class="col-md-7 heading-section heading-section-2 text-center ftco-animate">
-	            <h2 class="mb-4">Follow me on Instagram</h2>
+	            <h2 class="mb-4">sigueme en instagran</h2>
 	          </div>
 	        </div>
 					<div class="row no-gutters">
