--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Louie - Free Bootstrap 4 Template by Colorlib</title>
+    <title>john - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -77,7 +77,7 @@
 								<h1 class="big-letter">John Narvaez</h1>
 								<h1 class="mb-4"><span>John Narvaez</span> A Photographer. <span>I Capture Life</span></h1>
 								<p class="mb-4">I am A Photographer from America Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								<h3 class="signature h1">Louie Smith</h3>
+								<h3 class="signature h1">John Narvaez</h3>
 								<ul class="ftco-social mt-3">
 		              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 		              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
